force-app/main/default/objects/Applied_Contract__c/Applied_Contract__c.object-meta.xml
<CustomObject>
    <description>This object is used to relate Service Contract records that are used to entitle Cases, Work Orders and Parts Orders with one or more Service Contract entitlements.</description>
    <label>Applied Contract</label>
    <nameField>
        <displayFormat>SCJN-{000000}</displayFormat>
        <label>Applied Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>