force-app/main/default/objects/Applied_Contract__c/fields/Applied_Contract_Source__c.field-meta.xml
<CustomField>
    <fullName>Applied_Contract_Source__c</fullName>
    <description>Note that this field specifies the triggering source of the Applied Contract.</description>
    <label>Applied Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WO Location/Account</fullName>
            </value>
            <value>
                <fullName>Associated Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>