force-app/main/default/objects/Applied_Contract__c/fields/Associated_Product__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Look up to Associated Product</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product</label>
    <referenceTo>Associated_Product__c</referenceTo>
    <relationshipLabel>Applied Contracts</relationshipLabel>
    <relationshipName>Applied_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>