force-app/main/default/objects/Applied_Contract__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to relate one or more Service Contracts to a Case for the purpose of Entitling Cases using one or more Service Contracts. This field is auto populated.</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Applied_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>