force-app/main/default/objects/Applied_Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>To populate end date from associated Service Contract</description>
    <formula>Service_Contract__r.SVMXC__End_Date__c</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>