force-app/main/default/objects/Applied_Contract__c/fields/Contract_End_Date_in_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_in_MM_DD_YYYY__c</fullName>
    <description>Contract End Date in MM/DD/YYYY format to show up in Service Report.</description>
    <formula>IF(ISBLANK(Service_Contract__r.SVMXC__End_Date__c) ,&apos;&apos;,
TEXT(MONTH(Service_Contract__r.SVMXC__End_Date__c))+&apos;/&apos;+ TEXT(DAY(Service_Contract__r.SVMXC__End_Date__c))+&apos;/&apos;+ TEXT(YEAR(Service_Contract__r.SVMXC__End_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date in MM/DD/YYYY</label>
    <type>Text</type>
</CustomField>