force-app/main/default/objects/Applied_Contract__c/fields/Download_Applied_Contract_to_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Download_Applied_Contract_to_Mobile__c</fullName>
    <description>Field for holding Download Criteria Value for Mobile</description>
    <formula>Work_Order__r.Download_Work_Order_to_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download Applied Contract to Mobile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>