force-app/main/default/objects/Applied_Contract__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated.</description>
    <label>Service Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipName>Applied_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>