force-app/main/default/objects/Applied_Contract__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to relate one or more Service Contracts to a Work Order for the purpose of Entitling Work Detail lines using one or more Service Contracts. This field is auto populated.</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipName>Applied_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>