force-app/main/default/objects/Applied_Contract__c/validationRules/CheckEditWhenWOIsClosedOrComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditWhenWOIsClosedOrComplete</fullName>
    <active>true</active>
    <description>To prevent create/edit when associated work order is completed/closed</description>
    <errorConditionFormula>AND( 
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c), 
    OR(
        TEXT(Work_Order__r.SVMXC__Order_Status__c) == $Label.Closed,
        TEXT(Work_Order__r.SVMXC__Order_Status__c) == $Label.Completed
       )
    )</errorConditionFormula>
    <errorMessage>Entitlement cannot be created/edited when associated work order is completed/closed</errorMessage>
</ValidationRule>