force-app/main/default/objects/Applied_Contract__c/validationRules/CheckProfileOfCreateEditUser.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProfileOfCreateEditUser</fullName>
    <active>true</active>
    <description>Only Customer service users can create/edit Entitlements manually.</description>
    <errorConditionFormula>AND(  ISPICKVAL(Record_Creation_Source__c, &apos;Manual&apos;),
      NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
      $Profile.Name &lt;&gt; $Label.ProfileCustomerService, 
      $Profile.Name &lt;&gt; $Label.ProfileSystemAdmin,
      $Profile.Name &lt;&gt; &apos;Integration Service SnapLogic&apos;
   )</errorConditionFormula>
    <errorMessage>Only Customer service users can create/edit Entitlements manually.</errorMessage>
</ValidationRule>